[ESQL] Track input shape to reconstruct multi-value outputs from flattened inference results