@@ -12,7 +12,7 @@ import org.elasticsearch.compute.data.BytesRefBlock;
 import org.elasticsearch.compute.test.ComputeTestCase;
 import org.elasticsearch.inference.TaskType;
 import org.elasticsearch.xpack.core.inference.action.InferenceAction;
-import org.elasticsearch.xpack.esql.inference.bulk.BulkRequestItem;
+import org.elasticsearch.xpack.esql.inference.bulk.BulkInferenceRequestItem;
 
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.nullValue;
@@ -29,34 +29,62 @@ public class TextEmbeddingOperatorRequestIteratorTests extends ComputeTestCase {
 
     public void testIterateWithNullValues() throws Exception {
         final String inferenceId = randomIdentifier();
-        final BytesRefBlock inputBlock = createBlockWithNulls();
 
-        try (TextEmbeddingOperatorRequestIterator requestIterator = new TextEmbeddingOperatorRequestIterator(inputBlock, inferenceId)) {
-            BytesRef scratch = new BytesRef();
+        // Create a block with pattern: [null, "before", null, null, "after", null]
+        try (BytesRefBlock.Builder blockBuilder = blockFactory().newBytesRefBlockBuilder(6)) {
+            blockBuilder.appendNull();
+            blockBuilder.appendBytesRef(new BytesRef("before"));
+            blockBuilder.appendNull();
+            blockBuilder.appendNull();
+            blockBuilder.appendBytesRef(new BytesRef("after"));
+            blockBuilder.appendNull();
 
-            // First position: "before"
-            BulkRequestItem requestItem1 = requestIterator.next();
-            InferenceAction.Request request1 = requestItem1.request();
+            BytesRefBlock inputBlock = blockBuilder.build();
 
-            assertThat(request1.getInferenceEntityId(), equalTo(inferenceId));
-            assertThat(request1.getTaskType(), equalTo(TaskType.TEXT_EMBEDDING));
-            scratch = inputBlock.getBytesRef(inputBlock.getFirstValueIndex(0), scratch);
-            assertThat(request1.getInput().get(0), equalTo(scratch.utf8ToString()));
+            try (
+                TextEmbeddingInferenceRequestIterator requestIterator = new TextEmbeddingInferenceRequestIterator(inputBlock, inferenceId)
+            ) {
+                // First item: "before" with surrounding nulls
+                assertTrue(requestIterator.hasNext());
+                BulkInferenceRequestItem item1 = requestIterator.next();
+                assertThat(item1.request().getInput().getFirst(), equalTo("before"));
+                assertThat(item1.shape(), equalTo(new int[] { 0, 1, 0, 0 })); // 1 leading null, value, 2 trailing nulls
 
-            // Second position: null
-            BulkRequestItem requestItem2 = requestIterator.next();
-            InferenceAction.Request request2 = requestItem2.request();
+                // Second item: "after" with trailing null
+                assertTrue(requestIterator.hasNext());
+                BulkInferenceRequestItem item2 = requestIterator.next();
+                assertThat(item2.request().getInput().getFirst(), equalTo("after"));
+                assertThat(item2.shape(), equalTo(new int[] { 1, 0 })); // value, 1 trailing null
 
-            assertThat(request2, nullValue());
+                // No more items
+                assertFalse(requestIterator.hasNext());
+            }
+        }
 
-            // Third position: "after"
-            BulkRequestItem requestItem3 = requestIterator.next();
-            InferenceAction.Request request3 = requestItem3.request();
+        allBreakersEmpty();
+    }
 
-            assertThat(request3.getInferenceEntityId(), equalTo(inferenceId));
-            assertThat(request3.getTaskType(), equalTo(TaskType.TEXT_EMBEDDING));
-            scratch = inputBlock.getBytesRef(inputBlock.getFirstValueIndex(2), scratch);
-            assertThat(request3.getInput().get(0), equalTo(scratch.utf8ToString()));
+    public void testIterateAllNulls() throws Exception {
+        final String inferenceId = randomIdentifier();
+
+        // Create a block with all nulls
+        try (BytesRefBlock.Builder blockBuilder = blockFactory().newBytesRefBlockBuilder(3)) {
+            blockBuilder.appendNull();
+            blockBuilder.appendNull();
+            blockBuilder.appendNull();
+
+            BytesRefBlock inputBlock = blockBuilder.build();
+
+            try (
+                TextEmbeddingInferenceRequestIterator requestIterator = new TextEmbeddingInferenceRequestIterator(inputBlock, inferenceId)
+            ) {
+                assertTrue(requestIterator.hasNext());
+                BulkInferenceRequestItem item = requestIterator.next();
+                assertThat(item.request(), nullValue());
+                assertThat(item.shape(), equalTo(new int[] { 0, 0, 0 }));
+
+                assertFalse(requestIterator.hasNext());
+            }
         }
 
         allBreakersEmpty();
@@ -66,16 +94,16 @@ public class TextEmbeddingOperatorRequestIteratorTests extends ComputeTestCase {
         final String inferenceId = randomIdentifier();
         final BytesRefBlock inputBlock = createMultiValueBlock();
 
-        try (TextEmbeddingOperatorRequestIterator requestIterator = new TextEmbeddingOperatorRequestIterator(inputBlock, inferenceId)) {
+        try (TextEmbeddingInferenceRequestIterator requestIterator = new TextEmbeddingInferenceRequestIterator(inputBlock, inferenceId)) {
             // First position: multi-value, keep only the first value
-            BulkRequestItem requestItem1 = requestIterator.next();
+            BulkInferenceRequestItem requestItem1 = requestIterator.next();
             InferenceAction.Request request1 = requestItem1.request();
             assertThat(request1.getInferenceEntityId(), equalTo(inferenceId));
             assertThat(request1.getTaskType(), equalTo(TaskType.TEXT_EMBEDDING));
             assertThat(request1.getInput().get(0), equalTo("first"));
 
             // Second position: single value
-            BulkRequestItem requestItem2 = requestIterator.next();
+            BulkInferenceRequestItem requestItem2 = requestIterator.next();
             InferenceAction.Request request2 = requestItem2.request();
             assertThat(request2.getInferenceEntityId(), equalTo(inferenceId));
             assertThat(request2.getTaskType(), equalTo(TaskType.TEXT_EMBEDDING));
@@ -90,7 +118,7 @@ public class TextEmbeddingOperatorRequestIteratorTests extends ComputeTestCase {
         final int size = randomIntBetween(10, 1000);
         final BytesRefBlock inputBlock = randomInputBlock(size);
 
-        try (TextEmbeddingOperatorRequestIterator requestIterator = new TextEmbeddingOperatorRequestIterator(inputBlock, inferenceId)) {
+        try (TextEmbeddingInferenceRequestIterator requestIterator = new TextEmbeddingInferenceRequestIterator(inputBlock, inferenceId)) {
             assertThat(requestIterator.estimatedSize(), equalTo(size));
         }
 
@@ -102,7 +130,7 @@ public class TextEmbeddingOperatorRequestIteratorTests extends ComputeTestCase {
         final int size = randomIntBetween(5, 50);
         final BytesRefBlock inputBlock = randomInputBlock(size);
 
-        try (TextEmbeddingOperatorRequestIterator requestIterator = new TextEmbeddingOperatorRequestIterator(inputBlock, inferenceId)) {
+        try (TextEmbeddingInferenceRequestIterator requestIterator = new TextEmbeddingInferenceRequestIterator(inputBlock, inferenceId)) {
             int count = 0;
             while (requestIterator.hasNext()) {
                 requestIterator.next();
@@ -121,11 +149,11 @@ public class TextEmbeddingOperatorRequestIteratorTests extends ComputeTestCase {
         final String inferenceId = randomIdentifier();
         final BytesRefBlock inputBlock = randomInputBlock(size);
 
-        try (TextEmbeddingOperatorRequestIterator requestIterator = new TextEmbeddingOperatorRequestIterator(inputBlock, inferenceId)) {
+        try (TextEmbeddingInferenceRequestIterator requestIterator = new TextEmbeddingInferenceRequestIterator(inputBlock, inferenceId)) {
             BytesRef scratch = new BytesRef();
 
             for (int currentPos = 0; requestIterator.hasNext(); currentPos++) {
-                BulkRequestItem requestItem = requestIterator.next();
+                BulkInferenceRequestItem requestItem = requestIterator.next();
                 InferenceAction.Request request = requestItem.request();
 
                 assertThat(request.getInferenceEntityId(), equalTo(inferenceId));
@@ -147,15 +175,6 @@ public class TextEmbeddingOperatorRequestIteratorTests extends ComputeTestCase {
             }
 
             return blockBuilder.build();
-        }
-    }
-
-    private BytesRefBlock createBlockWithNulls() {
-        try (BytesRefBlock.Builder builder = blockFactory().newBytesRefBlockBuilder(3)) {
-            builder.appendBytesRef(new BytesRef("before"));
-            builder.appendNull();
-            builder.appendBytesRef(new BytesRef("after"));
-            return builder.build();
         }
     }
 
